--- a/index.html
+++ b/index.html
@@ -22,15 +22,90 @@
       </button>
       <a class="navbar-brand" href="#"><a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a></a>
       <div class="collapse navbar-collapse" id="Navbar">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a class="nav-link active" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
           <li class="nav-item"><a class="nav-link" href="aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
           <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
           <li class="nav-item"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact us</a></li>
         </ul>
+        <span class="navbar-text">
+          <button>
+            <span class="fa fa-sign-in"></span>Login
+          </button>
+        </span>
       </div>
     </div>
   </nav>
+
+    <div class="modal fade" id="loginModal" role="dialog">
+      <div class="modal-dialog modal-lg" role="content">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Reserve Table</h4>
+            <button type="button" class="close" data-dismiss="modal" >&times;</button>
+          </div>
+          <div class="modal-body">
+            <form>
+                        <div class="form-row">
+                            <div class="form-group ">
+                              <div class="row">
+                                <h5 class="col-12 col-md-2">Number of Guests</h5>
+                                <dd class="col-12 col-md-10">
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                    <label class="form-check-label" for="inlineRadio1">1</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                    <label class="form-check-label" for="inlineRadio2">2</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+                                    <label class="form-check-label" for="inlineRadio3">3</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+                                    <label class="form-check-label" for="inlineRadio3">4</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+                                    <label class="form-check-label" for="inlineRadio3">5</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+                                    <label class="form-check-label" for="inlineRadio3">6</label>
+                                  </div>
+                                  <br>
+
+                                </dd>
+                                <h5 class="col-12 col-md-2">Section</h5>
+                                <dd class="btn btn-group col-12 col-md-10">
+                                  <button type="button" name="" class="btn btn-success col-3" placeholder="no-smoking">non-smoking</button>
+                                  <button type="button" name="" class="btn btn-danger col-2" placeholder="smoking">smoking</button>
+                                </dd>
+                                    <label for="telnum" class="col-12 col-md-2 col-form-label"><h5>Date and Time</h5></label>
+                                    <div class="col-12 col-md-4">
+                                      <input type="text" name="date" placeholder="date" id="text" class="form-control">
+                                    </div>
+                                    <div class="col-12 col-md-4">
+                                      <input type="text" name="date" placeholder="time" id="text" class="form-control">
+                                    </div>
+
+
+                                <dd class="col  offset-2 my-2">
+                                  <button type="button" class="btn btn-secondary" name="button">cancel</button>
+                                    <button type="button" class="btn btn-primary" name="button">Reverse</button>
+                                </dd>
+
+                              </div>
+                            </div>
+
+                        </div>
+                    </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -42,59 +117,56 @@
                   <img src="img/logo.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                  <button type="button " class="btn btn-warning px-5" name="button"><strong>Reserve Table</strong> </button>
+                  <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal" data-target="#loginModal"  data-html="true" >Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
 
     <div class="container">
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Our Lipsmacking Culinary Creations</h3>
+      <div class="row row-content">
+        <div class="col">
+          <div id="mycarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+                      <div class="carousel-item active">
+                          <img class="d-block img-fluid"
+                              src="img/uthappizza.png" alt="Uthappizza">
+                          <div class="carousel-caption d-none d-md-block">
+                              <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
+                              <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                          </div>
+                      </div>
+                      <div class="carousel-item">
+                          <img class="d-block img-fluid" src="img/buffet.png" alt="Buffet">
+                          <div class="carousel-caption d-none d-md-block">
+                            <h2 class="mt-0">Weekend Grand Buffet<span class="badge badge-danger">NEW</span></h2>
+                            <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                          </div>
+                      </div>
+                      <div class="carousel-item">
+                          <img class="d-block img-fluid" src="img/alberto.png" alt="alberto">
+                          <div class="carousel-caption d-none d-md-block">
+                            <h2>Alberto Somayya</h2>
+                            <h4>Executive Chef</h4>
+                            <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                          </div>
+                      </div>
+                  </div>
+                  <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>
             </div>
-            <div class="col col-sm order-sm-first col-md">
-              <div class="media">
-                <img class="img-thumbnail mr-3 d-flex align-self-center" src="img/Uthappizza.png" alt="Uthappizza">
-                <div class="media-body">
-                  <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span><span class="badge badge-pill badge-secondary">$4.99</span></h2>
-                  <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
-                </div>
-              </div>
-            </div>
+            <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
         </div>
+      </div>
 
-
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3">
-                <h3>This Month's Promotions</h3>
-            </div>
-            <div class="col col-sm col-md">
-              <div class="media">
-                <div class="media-body">
-                  <h2>Weekend Grand Buffet<span class="badge badge-danger">NEW</span></h2>
-                  <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-                </div>
-                <img class="mr-3 d-flex img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
-              </div>
-            </div>
-        </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Meet our Culinary Specialists</h3>
-            </div>
-            <div class="col col-sm order-sm-first col-md">
-              <div class="media">
-                <img class="mr-3 d-flex img-thumbnail align-self-center" src="img/alberto.png" alt="">
-                <div class="media-body">
-                  <h2>Alberto Somayya</h2>
-                  <h4>Executive Chef</h4>
-                  <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
-                </div>
-              </div>
-            </div>
-        </div>
     </div>
     <div class="container col-sm-6 my-3  justify-content-center">
       <div class="card">
@@ -192,6 +264,14 @@
        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+       <script type="text/javascript">
+         $(document).ready(function(){
+           $('[data-toggle="tooltip"]').tooltip();
+         });
+       </script>
 </body>
 
 </html>
