--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/bootstrap-social.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<!-- endbuild -->
-	
+
 	<!-- Title -->
 	<title>Ristorante Con Fusion</title>
 </head>
@@ -27,7 +27,7 @@
 			</button>
 			<a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41"></a>
 			<div class="collapse navbar-collapse" id="Navbar">
-				<ul class="navbar-nav mr-auto"">
+				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
@@ -89,7 +89,7 @@
 							<label class="col-12 col-sm-2 col-form-label">Number of Guest</label>
 							<div class="form-check form-check-inline col-12 col-sm">
 								<label class="form-check-label">
-									<input type="radio" class="form-check-input" id="numberofguest1" name="numberofguest" value="1"> 1 
+									<input type="radio" class="form-check-input" id="numberofguest1" name="numberofguest" value="1"> 1
 								</label>
 								<label class="form-check-label">
 									<input type="radio" class="form-check-input" id="numberofguest2" name="numberofguest" value="2"> 2
@@ -233,7 +233,7 @@
 				</div>
 			</div>
 		</div>
-       
+
 		<!-- Our Lipsmacking Culinary Creations -->
 		<div class="row row-content align-items-center">
 			<div class="col-sm-4 col-md-3 flex-last">
